# JetPack

./: .gitignore  pyproject.toml
JetPack/src/jetpack/: classes.py
src/jetpack/classes/: classes.py
src/jetpack/gui/: __init__.py
src/jetpack/networks/: socket_client.py  socket_server.py
tests/: dedupe_test.py
