[project]
name = "JetPack"
version = "0.0.1"
authors = [
  { name="Gomer Compyle", email="gomer@pvtcompyle.com" },
]
description = "A collection of utilities I have found useful for several projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/pvtcompyle/JetPack/"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

